merge event X product